# https://doc.rust-lang.org/cargo/reference/manifest.html
# https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md#config-fields

[package]
name = "democracy"
description = "A community oriented Discord bot."
version = "0.1.3"
license = "MIT OR Apache-2.0"
edition = "2021"
documentation = "https://github.com/zenekron/democracy"
homepage = "https://github.com/zenekron/democracy"
repository = "https://github.com/zenekron/democracy"
publish = false

[package.metadata.release]
pre-release-hook = ["./scripts/pre-release.sh", "{{crate_name}}", "{{version}}"]

[dependencies]
async-trait = "0.1.71"
base64 = "0.21.2"
chrono = "0.4.26"
config = "0.13.3"
derive_builder = "0.12.0"
humantime = "2.1.0"
log = "0.4.19"
once_cell = "1.18.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
serde = { version = "1.0.164", features = ["derive"] }
serenity = { version = "0.11.6", default-features = false, features = ["builder", "cache", "chrono", "client", "gateway", "model", "http", "utils", "rustls_backend"] }
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "time"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }
